--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>QingBlogFrontend</title>
-    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="src/common/css/reset.css">
+    <link rel="icon" href="/fed/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="app"></div>
