add blog readCount increase

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>QingBlogFrontend</title>
     <link rel="icon" href="/fed/favicon.ico" type="image/x-icon">
+    <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
   </head>
   <body>
     <div id="app"></div>
